--- a/src/styling/scss/_ContactStyling.scss
+++ b/src/styling/scss/_ContactStyling.scss
@@ -68,6 +68,7 @@
         label {
           font-weight: bolder;
           color: var(--SiteColor1);
+          -webkit-text-stroke: 0.5px var(--SiteColor1);
           z-index: 1;
           pointer-events: none;
           font-size: clamp(0.7em, 2vw, 1em);
@@ -93,9 +94,11 @@
           &:valid {
             transition: color 500ms;
             color: var(--SiteColor1);
+            -webkit-text-stroke: 0.5px var(--SiteColor1);
 
             & + label {
               color: var(--SiteColor3);
+              -webkit-text-stroke: 0.5px var(--SiteColor3);
               transform: translate(0px, -100%);
               transition: color 500ms, transform 500ms, background-color 500ms;
               background-color: transparent;
@@ -122,6 +125,7 @@
           margin-left: 0%;
           border: 2px solid var(--SiteColor3);
           color: var(--SiteColor3);
+          -webkit-text-stroke: 0.5px var(--SiteColor3);
           background-color: transparent;
           font-weight: bolder;
           border-radius: 5px;
@@ -143,6 +147,7 @@
           &:hover {
             background-color: var(--SiteColor3);
             color: var(--SiteColor1);
+            -webkit-text-stroke: 0.5px var(--SiteColor1);
             box-shadow: 0px 0px 10px var(--SiteColor3);
             transition: background-color 500ms, color 500ms, box-shadow 500ms;
           }
