--- a/src/styling/scss/_Functions.scss
+++ b/src/styling/scss/_Functions.scss
@@ -14,15 +14,18 @@
   font-weight: bolder;
   border-radius: 5px;
   font-size: clamp(0.8em, 2vw, 1.2em);
-  transition: background-color 500ms, color 500ms, box-shadow 500ms;
+  transition: -webkit-text-stroke 500ms, background-color 500ms, color 500ms,
+    box-shadow 500ms;
   box-shadow: 0px 0px 0px transparent;
   cursor: pointer;
 
   &:hover {
     background-color: var(--SiteColor3);
     color: var(--SiteColor1);
+    -webkit-text-stroke: 0.5px var(--SiteColor1);
     box-shadow: 0px 0px 10px var(--SiteColor3);
-    transition: background-color 500ms, color 500ms, box-shadow 500ms;
+    transition: -webkit-text-stroke 500ms, background-color 500ms, color 500ms,
+      box-shadow 500ms;
   }
 }
 
