--- a/src/styling/scss/index.scss
+++ b/src/styling/scss/index.scss
@@ -98,8 +98,8 @@ html {
 
 .App {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   background-color: var(--SiteColor2);
   transition: background-color 500ms;
@@ -120,6 +120,7 @@ html {
   // font-family: "Source Serif Pro", serif;
   // font-family: "Unica One", cursive;
   font-family: "Bungee Hairline", cursive;
+  -webkit-text-stroke: 0.5px var(--SiteColor3);
   // font-family: "Chakra Petch", sans-serif;
 
   display: grid;
